Fix sidebar vh height on mobile

--- a/src/styles/layouts/_sidebar.scss
+++ b/src/styles/layouts/_sidebar.scss
@@ -3,7 +3,7 @@
 .sidebar {
   position: absolute;
   margin-top: a.rem(60);
-  height: calc(100% - a.rem(92));
+  height: calc(var(--vh, 1vh) * 100 - a.rem(92));
   display: flex;
   flex-direction: column;
   align-items: center;
